--- a/InterfazControl/Intro.ui
+++ b/InterfazControl/Intro.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1555</width>
-    <height>876</height>
+    <width>1920</width>
+    <height>1080</height>
    </rect>
   </property>
   <property name="focusPolicy">
@@ -22,15 +22,15 @@
   <widget class="QPushButton" name="btnOpen">
    <property name="geometry">
     <rect>
-     <x>690</x>
-     <y>530</y>
-     <width>451</width>
-     <height>71</height>
+     <x>850</x>
+     <y>658</y>
+     <width>555</width>
+     <height>85</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color:rgb(140, 140, 140);border: 0px; border-radius:6px;
-font: bold;</string>
+font: bold 13pt;</string>
    </property>
    <property name="text">
     <string>OPEN MISSION</string>
@@ -39,14 +39,15 @@ font: bold;</string>
   <widget class="QPushButton" name="btnNew">
    <property name="geometry">
     <rect>
-     <x>688</x>
-     <y>376</y>
-     <width>451</width>
-     <height>71</height>
+     <x>850</x>
+     <y>465</y>
+     <width>555</width>
+     <height>85</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <pointsize>12</pointsize>
      <weight>75</weight>
      <italic>false</italic>
      <bold>true</bold>
@@ -58,7 +59,7 @@ font: bold;</string>
    <property name="styleSheet">
     <string notr="true">color:white;border: 20px; border-radius:6px;
 border-color: rgb(0, 0, 0);
-font: bold;
+font: bold 12pt;
 </string>
    </property>
    <property name="text">
@@ -68,15 +69,15 @@ font: bold;
   <widget class="QPushButton" name="btnOff">
    <property name="geometry">
     <rect>
-     <x>688</x>
-     <y>610</y>
-     <width>451</width>
-     <height>71</height>
+     <x>850</x>
+     <y>758</y>
+     <width>555</width>
+     <height>85</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color:rgb(255, 255, 255);border: 0px; border-radius:6px;
-font: bold;</string>
+font: bold 13pt;</string>
    </property>
    <property name="text">
     <string>TURN OFF</string>
@@ -85,8 +86,8 @@ font: bold;</string>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>300</y>
+     <x>480</x>
+     <y>430</y>
      <width>131</width>
      <height>131</height>
     </rect>
@@ -101,14 +102,14 @@ font: bold;</string>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>770</x>
-     <y>210</y>
-     <width>311</width>
+     <x>970</x>
+     <y>270</y>
+     <width>321</width>
      <height>20</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: bold 12pt</string>
+    <string notr="true">font: bold 13pt</string>
    </property>
    <property name="text">
     <string>Welcome to Nautilus Commander</string>
@@ -117,15 +118,15 @@ font: bold;</string>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>820</x>
-     <y>300</y>
+     <x>1030</x>
+     <y>400</y>
      <width>191</width>
      <height>16</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(153, 153, 153);
-font: bold 10pt;</string>
+font: bold 11pt;</string>
    </property>
    <property name="text">
     <string>¿What do you want to do?</string>
@@ -134,15 +135,15 @@ font: bold 10pt;</string>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>900</x>
-     <y>483</y>
+     <x>1120</x>
+     <y>600</y>
      <width>21</width>
      <height>16</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(153, 153, 153);
-font: bold 10pt;</string>
+font: bold 11pt;</string>
    </property>
    <property name="text">
     <string>Or</string>
@@ -151,8 +152,8 @@ font: bold 10pt;</string>
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>470</y>
+     <x>490</x>
+     <y>600</y>
      <width>111</width>
      <height>16</height>
     </rect>
@@ -168,8 +169,8 @@ font: bold 15pt</string>
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>490</y>
+     <x>470</x>
+     <y>620</y>
      <width>141</width>
      <height>21</height>
     </rect>
@@ -187,15 +188,15 @@ font: 15pt</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1555</width>
-     <height>876</height>
+     <width>1920</width>
+     <height>1080</height>
     </rect>
    </property>
    <property name="focusPolicy">
     <enum>Qt::NoFocus</enum>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-image: url(:/new/prefix1/nautilusBack.png);</string>
+    <string notr="true">background-image: url(:/new/prefix1/nautilusBack1920x1080.png);</string>
    </property>
    <property name="text">
     <string/>
@@ -204,8 +205,8 @@ font: 15pt</string>
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>1020</x>
-     <y>720</y>
+     <x>1290</x>
+     <y>910</y>
      <width>41</width>
      <height>16</height>
     </rect>
@@ -221,8 +222,8 @@ font: bold 10pt;</string>
   <widget class="QLabel" name="lblHelp">
    <property name="geometry">
     <rect>
-     <x>1066</x>
-     <y>720</y>
+     <x>1330</x>
+     <y>910</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -239,6 +240,25 @@ text-decoration: underline;</string>
     <string>Help?</string>
    </property>
   </widget>
+  <widget class="QListWidget" name="listWidget">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>830</x>
+     <y>340</y>
+     <width>591</width>
+     <height>601</height>
+    </rect>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::NoFocus</enum>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(245, 245, 245);</string>
+   </property>
+  </widget>
   <zorder>label</zorder>
   <zorder>btnOpen</zorder>
   <zorder>btnNew</zorder>
@@ -251,6 +271,7 @@ text-decoration: underline;</string>
   <zorder>label_7</zorder>
   <zorder>label_8</zorder>
   <zorder>lblHelp</zorder>
+  <zorder>listWidget</zorder>
  </widget>
  <tabstops>
   <tabstop>btnNew</tabstop>
