--- a/InterfazControl/icons/icons.qrc
+++ b/InterfazControl/icons/icons.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/new/prefix1">
         <file>nautilusBack.png</file>
         <file>nautilus128x128.svg</file>
+        <file>nautilusBack1920x1080.png</file>
     </qresource>
 </RCC>
