Arreglo en la conversion de string para el sensor de bateria

--- a/InterfazControl/icons/icons.qrc
+++ b/InterfazControl/icons/icons.qrc
@@ -42,5 +42,6 @@
         <file>dotGray.png</file>
         <file>dotGreen.png</file>
         <file>explorerDefault2.png</file>
+        <file>backWhite.png</file>
     </qresource>
 </RCC>
