--- a/InterfazControl/Intro.ui
+++ b/InterfazControl/Intro.ui
@@ -414,11 +414,11 @@ font: bold 11pt;</string>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">QProgressBar {border: 2px solid grey;border-radius: 5px; text-align: center; background-image: url(:/null);}
+      <string notr="true">QProgressBar {border: 2px solid grey;border-radius: 5px; text-align: center; background-image:  url(:/null); }
 QProgressBar::chunk {background-color: #37A2E5;width: 20px}</string>
      </property>
      <property name="value">
-      <number>50</number>
+      <number>1</number>
      </property>
     </widget>
     <widget class="QLabel" name="label_rovBatt">
@@ -467,11 +467,11 @@ font: 11pt;</string>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">QProgressBar {border: 2px solid grey;border-radius: 5px; text-align: center; background-image: url(:/null);}
-QProgressBar::chunk {background-color:  rgb(146, 255, 116);width: 20px}</string>
+      <string notr="true">QProgressBar {border: 2px solid grey;border-radius: 5px; text-align: center; background-image:  url(:/null); }
+QProgressBar::chunk {background-color:  rgb(146, 255, 116);width: 20px;}</string>
      </property>
      <property name="value">
-      <number>50</number>
+      <number>1</number>
      </property>
     </widget>
     <widget class="QLabel" name="label_btnA">
