--- a/InterfazControl/Intro.ui
+++ b/InterfazControl/Intro.ui
@@ -1233,7 +1233,7 @@ font: bold 11pt;</string>
      <property name="geometry">
       <rect>
        <x>1720</x>
-       <y>130</y>
+       <y>100</y>
        <width>161</width>
        <height>23</height>
       </rect>
@@ -1250,7 +1250,7 @@ QProgressBar::chunk {background-color: #37A2E5;width: 20px}</string>
      <property name="geometry">
       <rect>
        <x>1760</x>
-       <y>160</y>
+       <y>130</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -1268,7 +1268,7 @@ font:  11pt;</string>
      <property name="geometry">
       <rect>
        <x>1740</x>
-       <y>250</y>
+       <y>200</y>
        <width>121</width>
        <height>21</height>
       </rect>
@@ -1286,7 +1286,7 @@ font: 11pt;</string>
      <property name="geometry">
       <rect>
        <x>1720</x>
-       <y>220</y>
+       <y>170</y>
        <width>161</width>
        <height>23</height>
       </rect>
@@ -1382,22 +1382,6 @@ font: bold 11pt;</string>
       <string/>
      </property>
     </widget>
-    <widget class="QLabel" name="label_btnY">
-     <property name="geometry">
-      <rect>
-       <x>25</x>
-       <y>414</y>
-       <width>32</width>
-       <height>32</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-image: url(:/new/prefix1/xboxY32.png);</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
@@ -1418,7 +1402,7 @@ font: bold 11pt;</string>
      <property name="geometry">
       <rect>
        <x>25</x>
-       <y>490</y>
+       <y>414</y>
        <width>32</width>
        <height>32</height>
       </rect>
@@ -1433,8 +1417,8 @@ font: bold 11pt;</string>
     <widget class="QLabel" name="label_screenshot">
      <property name="geometry">
       <rect>
-       <x>2</x>
-       <y>314</y>
+       <x>0</x>
+       <y>240</y>
        <width>78</width>
        <height>16</height>
       </rect>
@@ -1468,8 +1452,8 @@ font: bold 9pt;</string>
     <widget class="QLabel" name="label_take">
      <property name="geometry">
       <rect>
-       <x>23</x>
-       <y>297</y>
+       <x>25</x>
+       <y>220</y>
        <width>31</width>
        <height>21</height>
       </rect>
@@ -1500,42 +1484,6 @@ font: bold 9pt;</string>
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
-    <widget class="QLabel" name="label_onoff">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>370</y>
-       <width>51</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-image: url(null);
-color: rgb(255, 255, 255);
-font: bold 9pt;</string>
-     </property>
-     <property name="text">
-      <string>On/Off </string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_lights">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>390</y>
-       <width>41</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-image: url(null);
-color: rgb(255, 255, 255);
-font: bold 9pt;</string>
-     </property>
-     <property name="text">
-      <string>Lights</string>
-     </property>
-    </widget>
     <widget class="Line" name="line_4">
      <property name="geometry">
       <rect>
@@ -1556,8 +1504,8 @@ font: bold 9pt;</string>
     <widget class="QLabel" name="label_Record">
      <property name="geometry">
       <rect>
-       <x>17</x>
-       <y>445</y>
+       <x>18</x>
+       <y>293</y>
        <width>51</width>
        <height>16</height>
       </rect>
@@ -1575,7 +1523,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>460</y>
+       <y>310</y>
        <width>41</width>
        <height>16</height>
       </rect>
@@ -1589,28 +1537,11 @@ font: bold 9pt;</string>
       <string>Video</string>
      </property>
     </widget>
-    <widget class="Line" name="line_5">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>470</y>
-       <width>80</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-image: url(null);
-</string>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_move">
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>520</y>
+       <y>444</y>
        <width>41</width>
        <height>16</height>
       </rect>
@@ -1628,7 +1559,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>14</x>
-       <y>536</y>
+       <y>460</y>
        <width>51</width>
        <height>16</height>
       </rect>
@@ -1646,7 +1577,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>550</y>
+       <y>474</y>
        <width>80</width>
        <height>16</height>
       </rect>
@@ -1775,7 +1706,7 @@ font: bold 11pt;</string>
      <property name="geometry">
       <rect>
        <x>1750</x>
-       <y>350</y>
+       <y>290</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -1811,7 +1742,7 @@ font: bold 11pt;</string>
      <property name="geometry">
       <rect>
        <x>1830</x>
-       <y>320</y>
+       <y>260</y>
        <width>32</width>
        <height>32</height>
       </rect>
@@ -1830,7 +1761,7 @@ font: bold 11pt;</string>
      <property name="geometry">
       <rect>
        <x>1740</x>
-       <y>320</y>
+       <y>260</y>
        <width>81</width>
        <height>41</height>
       </rect>
@@ -1848,7 +1779,7 @@ font: bold 30pt;</string>
      <property name="geometry">
       <rect>
        <x>1760</x>
-       <y>440</y>
+       <y>360</y>
        <width>61</width>
        <height>41</height>
       </rect>
@@ -1866,7 +1797,7 @@ font: bold 30pt;</string>
      <property name="geometry">
       <rect>
        <x>1740</x>
-       <y>480</y>
+       <y>400</y>
        <width>131</width>
        <height>31</height>
       </rect>
@@ -1884,7 +1815,7 @@ font:  11pt;</string>
      <property name="geometry">
       <rect>
        <x>1830</x>
-       <y>440</y>
+       <y>360</y>
        <width>32</width>
        <height>32</height>
       </rect>
@@ -2015,7 +1946,7 @@ font: bold 11pt;</string>
      <property name="geometry">
       <rect>
        <x>6</x>
-       <y>571</y>
+       <y>495</y>
        <width>70</width>
        <height>50</height>
       </rect>
@@ -2031,7 +1962,7 @@ font: bold 11pt;</string>
      <property name="geometry">
       <rect>
        <x>15</x>
-       <y>790</y>
+       <y>714</y>
        <width>50</width>
        <height>70</height>
       </rect>
@@ -2047,7 +1978,7 @@ font: bold 11pt;</string>
      <property name="geometry">
       <rect>
        <x>1770</x>
-       <y>560</y>
+       <y>480</y>
        <width>50</width>
        <height>50</height>
       </rect>
@@ -2063,7 +1994,7 @@ font: bold 11pt;</string>
      <property name="geometry">
       <rect>
        <x>1740</x>
-       <y>640</y>
+       <y>560</y>
        <width>131</width>
        <height>31</height>
       </rect>
@@ -2081,7 +2012,7 @@ font:  11pt;</string>
      <property name="geometry">
       <rect>
        <x>1751</x>
-       <y>630</y>
+       <y>550</y>
        <width>90</width>
        <height>12</height>
       </rect>
@@ -2120,7 +2051,7 @@ QSlider::handle:horizontal {width: 10px; background-image: url(:/new/prefix1/dot
      <property name="geometry">
       <rect>
        <x>1840</x>
-       <y>535</y>
+       <y>455</y>
        <width>10</width>
        <height>90</height>
       </rect>
@@ -2153,7 +2084,7 @@ QSlider::handle:vertical{height: 10px; background-image: url(:/new/prefix1/dotGr
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>220</y>
+       <y>370</y>
        <width>51</width>
        <height>21</height>
       </rect>
@@ -2171,7 +2102,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>16</x>
-       <y>232</y>
+       <y>386</y>
        <width>51</width>
        <height>21</height>
       </rect>
@@ -2189,7 +2120,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>1780</x>
-       <y>740</y>
+       <y>660</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -2207,7 +2138,7 @@ font:  11pt;</string>
      <property name="geometry">
       <rect>
        <x>1770</x>
-       <y>680</y>
+       <y>600</y>
        <width>64</width>
        <height>64</height>
       </rect>
@@ -2223,7 +2154,7 @@ font:  11pt;</string>
      <property name="geometry">
       <rect>
        <x>1770</x>
-       <y>680</y>
+       <y>600</y>
        <width>64</width>
        <height>64</height>
       </rect>
@@ -2239,7 +2170,7 @@ font:  11pt;</string>
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>650</y>
+       <y>574</y>
        <width>80</width>
        <height>16</height>
       </rect>
@@ -2256,7 +2187,7 @@ font:  11pt;</string>
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>770</y>
+       <y>694</y>
        <width>80</width>
        <height>16</height>
       </rect>
@@ -2273,7 +2204,7 @@ font:  11pt;</string>
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>630</y>
+       <y>554</y>
        <width>71</width>
        <height>16</height>
       </rect>
@@ -2291,7 +2222,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>7</x>
-       <y>860</y>
+       <y>784</y>
        <width>71</width>
        <height>16</height>
       </rect>
@@ -2309,7 +2240,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>15</x>
-       <y>874</y>
+       <y>798</y>
        <width>61</width>
        <height>16</height>
       </rect>
@@ -2327,7 +2258,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>15</x>
-       <y>664</y>
+       <y>588</y>
        <width>50</width>
        <height>70</height>
       </rect>
@@ -2343,7 +2274,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>886</y>
+       <y>810</y>
        <width>80</width>
        <height>16</height>
       </rect>
@@ -2360,7 +2291,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>4</x>
-       <y>736</y>
+       <y>660</y>
        <width>71</width>
        <height>16</height>
       </rect>
@@ -2378,7 +2309,7 @@ font: bold 9pt;</string>
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>753</y>
+       <y>677</y>
        <width>71</width>
        <height>16</height>
       </rect>
@@ -2390,6 +2321,260 @@ font: bold 9pt;</string>
      </property>
      <property name="text">
       <string>Backwards</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_speedDown">
+     <property name="geometry">
+      <rect>
+       <x>14</x>
+       <y>821</y>
+       <width>50</width>
+       <height>50</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image:   url(:/new/prefix1/XboxLb48.png)</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_speed">
+     <property name="geometry">
+      <rect>
+       <x>15</x>
+       <y>866</y>
+       <width>41</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(null);
+color: rgb(255, 255, 255);
+font: bold 9pt;</string>
+     </property>
+     <property name="text">
+      <string>Speed</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_speed_down">
+     <property name="geometry">
+      <rect>
+       <x>17</x>
+       <y>882</y>
+       <width>41</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(null);
+color: rgb(255, 255, 255);
+font: bold 9pt;</string>
+     </property>
+     <property name="text">
+      <string>Down</string>
+     </property>
+    </widget>
+    <widget class="Line" name="line_13">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>900</y>
+       <width>80</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(null);
+</string>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_speedDown_2">
+     <property name="geometry">
+      <rect>
+       <x>14</x>
+       <y>910</y>
+       <width>50</width>
+       <height>50</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(:/new/prefix1/XboxRb48.png)</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_speed_2">
+     <property name="geometry">
+      <rect>
+       <x>19</x>
+       <y>956</y>
+       <width>41</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(null);
+color: rgb(255, 255, 255);
+font: bold 9pt;</string>
+     </property>
+     <property name="text">
+      <string>Speed</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_speed_up">
+     <property name="geometry">
+      <rect>
+       <x>31</x>
+       <y>970</y>
+       <width>41</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(null);
+color: rgb(255, 255, 255);
+font: bold 9pt;</string>
+     </property>
+     <property name="text">
+      <string>Up</string>
+     </property>
+    </widget>
+    <widget class="Line" name="line_14">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>980</y>
+       <width>80</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(null);
+</string>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+    <widget class="QDial" name="dial">
+     <property name="geometry">
+      <rect>
+       <x>1735</x>
+       <y>717</y>
+       <width>141</width>
+       <height>111</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="minimum">
+      <number>1</number>
+     </property>
+     <property name="maximum">
+      <number>22</number>
+     </property>
+     <property name="singleStep">
+      <number>5</number>
+     </property>
+     <property name="value">
+      <number>22</number>
+     </property>
+     <property name="sliderPosition">
+      <number>22</number>
+     </property>
+     <property name="tracking">
+      <bool>true</bool>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="invertedAppearance">
+      <bool>false</bool>
+     </property>
+     <property name="invertedControls">
+      <bool>false</bool>
+     </property>
+     <property name="wrapping">
+      <bool>false</bool>
+     </property>
+     <property name="notchesVisible">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_dialBack">
+     <property name="geometry">
+      <rect>
+       <x>1740</x>
+       <y>710</y>
+       <width>131</width>
+       <height>125</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(:/new/prefix1/dialBack.png);</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelControlBatt_8">
+     <property name="geometry">
+      <rect>
+       <x>1782</x>
+       <y>831</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(null);
+color: rgb(153, 153, 153);
+font:  11pt;</string>
+     </property>
+     <property name="text">
+      <string>Speed</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelControlBatt_9">
+     <property name="geometry">
+      <rect>
+       <x>1710</x>
+       <y>790</y>
+       <width>31</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(null);
+color: rgb(153, 153, 153);
+font:  11pt;</string>
+     </property>
+     <property name="text">
+      <string>min</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelControlBatt_10">
+     <property name="geometry">
+      <rect>
+       <x>1867</x>
+       <y>790</y>
+       <width>31</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(null);
+color: rgb(153, 153, 153);
+font:  11pt;</string>
+     </property>
+     <property name="text">
+      <string>max</string>
      </property>
     </widget>
     <zorder>mplayerWG</zorder>
@@ -2405,19 +2590,15 @@ font: bold 9pt;</string>
     <zorder>line</zorder>
     <zorder>label_btnB</zorder>
     <zorder>label_btnX</zorder>
-    <zorder>label_btnY</zorder>
     <zorder>label</zorder>
     <zorder>label_cross</zorder>
     <zorder>label_screenshot</zorder>
     <zorder>line_2</zorder>
     <zorder>label_take</zorder>
     <zorder>line_3</zorder>
-    <zorder>label_onoff</zorder>
-    <zorder>label_lights</zorder>
     <zorder>line_4</zorder>
     <zorder>label_Record</zorder>
     <zorder>label_video</zorder>
-    <zorder>line_5</zorder>
     <zorder>label_move</zorder>
     <zorder>label_camera</zorder>
     <zorder>line_6</zorder>
@@ -2452,6 +2633,19 @@ font: bold 9pt;</string>
     <zorder>line_11</zorder>
     <zorder>label_fordward</zorder>
     <zorder>label_backwards</zorder>
+    <zorder>label_speedDown</zorder>
+    <zorder>label_speed</zorder>
+    <zorder>label_speed_down</zorder>
+    <zorder>line_13</zorder>
+    <zorder>label_speedDown_2</zorder>
+    <zorder>label_speed_2</zorder>
+    <zorder>label_speed_up</zorder>
+    <zorder>line_14</zorder>
+    <zorder>label_dialBack</zorder>
+    <zorder>dial</zorder>
+    <zorder>labelControlBatt_8</zorder>
+    <zorder>labelControlBatt_9</zorder>
+    <zorder>labelControlBatt_10</zorder>
    </widget>
    <widget class="QWidget" name="explore_page">
     <property name="styleSheet">
