--- a/InterfazControl/Intro.ui
+++ b/InterfazControl/Intro.ui
@@ -1235,9 +1235,9 @@ font: bold 11pt;</string>
     <widget class="QProgressBar" name="progressBattRov">
      <property name="geometry">
       <rect>
-       <x>1720</x>
+       <x>1710</x>
        <y>100</y>
-       <width>161</width>
+       <width>181</width>
        <height>23</height>
       </rect>
      </property>
@@ -1245,8 +1245,11 @@ font: bold 11pt;</string>
       <string notr="true">QProgressBar {border: 2px solid grey;border-radius: 5px; text-align: center; background-image:  url(:/null); }
 QProgressBar::chunk {background-color: #37A2E5;width: 20px}</string>
      </property>
+     <property name="maximum">
+      <number>100</number>
+     </property>
      <property name="value">
-      <number>1</number>
+      <number>90</number>
      </property>
     </widget>
     <widget class="QLabel" name="label_rovBatt">
@@ -1288,9 +1291,9 @@ font: 11pt;</string>
     <widget class="QProgressBar" name="progressBattControl">
      <property name="geometry">
       <rect>
-       <x>1720</x>
+       <x>1710</x>
        <y>170</y>
-       <width>161</width>
+       <width>181</width>
        <height>23</height>
       </rect>
      </property>
@@ -1299,7 +1302,7 @@ font: 11pt;</string>
 QProgressBar::chunk {background-color:  rgb(146, 255, 116);width: 20px;}</string>
      </property>
      <property name="value">
-      <number>1</number>
+      <number>90</number>
      </property>
     </widget>
     <widget class="QLabel" name="label_btnA">
